B-F Sandbox Full-Backup/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Chain__c</fullName>
        <description>INFOWELDERS</description>
        <label>Chain</label>
        <picklist>
            <picklistValues>
                <fullName>Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>82 Ale House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>aloalo kitchen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAGUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-CUBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream Works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAT MAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLATNINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB&apos;s CAFÉ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlassGroup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldfinger East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT&apos;S INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KANAME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KENTO&apos;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KICHIRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIDO inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYOTO SHION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>METRO GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mouton</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>INFOWELDERS</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Sellable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub_Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTEG MAINLY ON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTEG MAINLY OFF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ON PREMISE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFF PREMISE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTEGRATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNCLASSIFIED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_of_Distribution_TD__c</fullName>
        <description>&quot;Channel of Distribution&quot; is an additional information to describe or select accounts in the german market - the information will be delivered by Nielsen /Trade Dimension monthly 
Note: it is not the same information like Channel [on/off/wholesaler,...]</description>
        <label>Channel of Distribution</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkout__c</fullName>
        <description>Number of Checkout/ Register</description>
        <inlineHelpText>Please type in the number of checkouts in the store/outlet!</inlineHelpText>
        <label>Checkout</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>INFOWELDERS</description>
        <label>City</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chongqing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choongcheongdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daegu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daejeon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi south</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi Trans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fukuoka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gangwondo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gansu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangdong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guizhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gwangju</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gyunggido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gyungsangbukdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gyungsangnamdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hainan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heilongjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henan</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Enter Comments</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Group_26__c</fullName>
        <description>INFOWELDERS</description>
        <label>Consumer Group: 26-39</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Consumer_Group_40_Up__c</fullName>
        <description>INFOWELDERS</description>
        <label>Consumer Group: 40-Up</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Consumer_Group_LTD_25__c</fullName>
        <description>INFOWELDERS</description>
        <label>Consumer Group: LTD - 25</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Enter Contract Date</inlineHelpText>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type_Trading_Company_TD__c</fullName>
        <description>..the information stored in this field allows the sales managers and their staff to select and analyze if the account [outlet] is &quot;independent&quot; or &quot;operated&quot; by a Headquarter; the information will be delivered monthly by Nielsen/Trade Dimension</description>
        <label>Contract Type [Trading Company]</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control__c</fullName>
        <description>FDC-PLFC</description>
        <label>Control</label>
        <picklist>
            <picklistValues>
                <fullName>Family-Controlled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family-Influenced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Controlled_Company_Exemptions__c</fullName>
        <description>FDC-PLFC</description>
        <label># Controlled Company Exemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Time__c</fullName>
        <description>FDC-GD</description>
        <formula>Now() + ( Time_Difference__c /24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Group__c</fullName>
        <description>NPA Rollout: Used to store the Customer Account Group.</description>
        <label>Customer Account Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <description>BFA - Not Required as replaced by banner group. Chris</description>
        <inlineHelpText>Customer Group - (Manager Group) ?? Does this come from ECC or BI 
 
This will be used for Marketing promotions.</inlineHelpText>
        <label>Customer Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Related_Facts_whse__c</fullName>
        <description>Customer Related Facts
[Active marketing Strength]</description>
        <inlineHelpText>Please type in available informations about Internet presence; online store/shop;  in-house exhibition /in-house trade fair and  flyer!</inlineHelpText>
        <label>Customer Related Facts</label>
        <picklist>
            <picklistValues>
                <fullName>e-commerce/distribution via internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>internet presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>online-shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>assortment catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inhouse trade fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>flyer/handouts</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <description>INFOWELDERS - Billing Address should be completely filled in.</description>
        <formula>IF(ISBLANK(BillingStreet), 0,1) + 
IF(ISBLANK(BillingCity  ), 0,1) +
IF(ISBLANK(BillingState  ), 0,1) +
IF(ISBLANK(BillingPostalCode  ), 0,1) +
IF(ISBLANK(BillingCountry ), 0,1)+
IF(ISBLANK( Website  ), 0,1)+
IF(ISBLANK( Fax   ), 0,1)+
IF(ISBLANK(  Phone  ), 0,1)+
IF(ISBLANK(  Outlet_Class__c   ), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If less than 5, the Billing Address is not complete.</inlineHelpText>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Day_Time__c</fullName>
        <description>Enter the preferred delivery (Day’s/ Hours) for visit (i.e. Mon-Fri 1-3)</description>
        <inlineHelpText>Enter the preferred delivery (Day’s/ Hours) for visit (i.e. Mon-Fri 1-3)</inlineHelpText>
        <label>Delivery - Day/Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <description>Infowelders</description>
        <label>Delivery Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delta_Relevent__c</fullName>
        <description>This field should be equal to &quot;X&quot; if the change date is less than or equal to the last 48 Hours</description>
        <formula>IF( LastModifiedDate  &gt;=  Now()-2, &quot;X&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delta Relevent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Delivery__c</fullName>
        <label>Direct Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>ZGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edeka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lekkerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dividend_Yield__c</fullName>
        <description>FDC-PLFC</description>
        <label>Dividend Yield</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dual_Class__c</fullName>
        <description>FDC-PLFC</description>
        <label>Dual Class?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBITDA_M__c</fullName>
        <formula>if(EBITDA__c&lt;&gt;0, EBITDA__c / 1000000,0)</formula>
        <label>EBITDA (M)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EBITDA__c</fullName>
        <description>FDC-PLFC database</description>
        <inlineHelpText>Populated by nightly Yahoo! feeds</inlineHelpText>
        <label>EBITDA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>E_Mail_Address__c</fullName>
        <label>E-Mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Earnings_Per_Share__c</fullName>
        <description>FDC-PLFC</description>
        <label>Earnings Per Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>English_Name__c</fullName>
        <description>INFOWLEDERS</description>
        <inlineHelpText>Name in English for reporting</inlineHelpText>
        <label>English Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_TD__c</fullName>
        <description>Equipment like cooler, etc.</description>
        <inlineHelpText>Equipment like cooler, etc.</inlineHelpText>
        <label>Equipment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Monthly_Visits__c</fullName>
        <formula>Outlet_Class__r.Monthly_Visit_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Monthly Visits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL( FN__Mapping_Status__c  , &apos;Located&apos;), HYPERLINK( &quot;apex/FN__FindNearbymap?lid=null&amp;aid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) , HYPERLINK( &quot;apex/FN__AGeoCode?id=&quot; &amp; Id,&quot;Locate Account&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Google Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Exhausted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FN__Which_Address__c</fullName>
        <label>Mapping Address</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Map</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Directors__c</fullName>
        <description>FDC-PLFC</description>
        <label># Family Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finacial_Strength_whse__c</fullName>
        <description>Finacial Strength</description>
        <inlineHelpText>Please type in informations about Ranking according to Crefo (if direct accounting) or if accounting via Kontor!</inlineHelpText>
        <label>Finacial Strength</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fully_independent_nominating_committee__c</fullName>
        <description>FDC-PLFC</description>
        <label>Fully independent nominating committee?</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GAM_whse__c</fullName>
        <description>GAM</description>
        <label>GAM</label>
        <picklist>
            <picklistValues>
                <fullName>&gt; 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GC_or_Legal_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-PLFC DB</description>
        <inlineHelpText>Identify legal officer</inlineHelpText>
        <label>GC or Legal Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Legal Officer)</relationshipLabel>
        <relationshipName>AccountsLegalOfficer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GD_Group__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Select Group</inlineHelpText>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duty Free Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAE Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEA - Thomas Hinrichs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GD_Market__c</fullName>
        <description>FDC-GD: Created by Raj</description>
        <inlineHelpText>Select Market</inlineHelpText>
        <label>Market1</label>
        <picklist>
            <picklistValues>
                <fullName>Airport Duty-Free Shops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium Duty Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil Duty Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean &amp; DF – Puyana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayman Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia, Slovenia, Albania</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GFM_whse__c</fullName>
        <description>GFM - Getränkefachmarkt</description>
        <label>GFM</label>
        <picklist>
            <picklistValues>
                <fullName>&gt; 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Promotion__c</fullName>
        <label>Group Promotion</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>INFOWELDERS</description>
        <label>Group</label>
        <picklist>
            <controllingField>Channel__c</controllingField>
            <picklistValues>
                <fullName>Convenience Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duty Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyper Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquor Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar / Pub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disco / Hip Hop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel / Resort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karaoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Night Club / Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant / Cafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports / Darts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slow Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Food / Bistro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Chain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ILN_Code__c</fullName>
        <description>ILN Code</description>
        <label>ILN Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Independent_Directors__c</fullName>
        <description>FDC-PLFC</description>
        <label># Independent Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Information_About_Region_TD__c</fullName>
        <description>Information About Region</description>
        <label>Information About Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Australia/Wombat Use</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Main__c</fullName>
        <formula>IF( CreatedById ==  OwnerId , &quot;true&quot;, &quot;false&quot;)</formula>
        <label>Is Main</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KAM_supervising_OPL__c</fullName>
        <description>Infowelders</description>
        <label>KAM supervising OPL</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMAA_Number__c</fullName>
        <description>Liquor Merchants Association Of Australia member number.</description>
        <label>LMAA Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Master_Data_Review__c</fullName>
        <label>Last Master Data Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Trade_Price__c</fullName>
        <description>FDC-PLFC</description>
        <label>Last Trade Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Date__c</fullName>
        <description>The date that the account was last visited.</description>
        <label>Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Independent_Director__c</fullName>
        <description>FDC-PLFC</description>
        <label>Lead Independent Director?</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>